Fix Color radio border on Safari.

--- a/assets/sass/components/thank-with-google/_googlesitekit-twg-color-radio.scss
+++ b/assets/sass/components/thank-with-google/_googlesitekit-twg-color-radio.scss
@@ -46,15 +46,12 @@
 
 				&::after {
 					border: none;
-					content: "";
 				}
 
-				.mdc-image-radio__content[aria-checked="true"] {
-					outline: 0.1875rem solid;
-				}
-
-				&[aria-checked="true"] {
-					border: 0.25rem solid $c-surfaces-surface;
+				&--checked::after {
+					border: 0.1875rem solid var(--border-color);
+					border-radius: 50%;
+					transform: scale(1.15);
 				}
 			}
 
